# excelParser

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/apps/upload_files/: admin.py  apps.py  constants.py  models.py  serializers.py  services.py  signals.py  tests.py  urls.py  validators.py  views.py
backend/apps/upload_files/migrations/: 0001_initial.py  0002_alter_uploadfile_finish_date.py  0002_create_superuser.py
backend/config/: settings.py  urls.py
nginx/: nginx.conf
